--- a/frontend/src/components/Auth/HistoryUser/HistoryUser.module.css
+++ b/frontend/src/components/Auth/HistoryUser/HistoryUser.module.css
@@ -224,6 +224,8 @@
 
 .muted {
   color: #999;
+  font-size: large;
+  margin: 10px;
 }
 
 .chartPlaceholder {
